<resources>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="on_close_activity">Stop playback?</string>
    <string name="queue_songs_clear">Clear queue?</string>
    <string name="favorites_clear">Clear all favorites?</string>
    <string name="favorite_remove">Delete %1s (%2s) from favorites?</string>
    <string name="favorites_save_time">Save song position</string>
    <string name="sorting_pref_save">Set as default sorting?</string>
    <string name="sorting_pref_reset">Reset track sorting</string>
    <string name="sorting_pref_reset_sum">Applies to albums and folders</string>
    <string name="sorting_pref_reset_confirm">Reset sorting preferences\?</string>
    <string name="sorting_pref_reset_neutral">Stop asking</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="songs">Songs</string>
    <string name="folders">Folders</string>
    <string name="equalizer">Equalizer</string>
    <string name="equalizer_presets">Presets</string>
    <string name="equalizer_bb">Bass boost</string>
    <string name="equalizer_v">Surround sound</string>
    <string name="artist_info">%1d Albums, %2d Songs</string>
    <string name="folder_info">%1d Songs</string>
    <string name="sorting_pref">Sorting</string>
    <string name="sorting_pref_default">Default</string>
    <string name="sorting_pref_track">By track no. ↓</string>
    <string name="sorting_pref_track_inv">By track no. ↑</string>
    <string name="sorting_pref_date_added">Added last</string>
    <string name="sorting_pref_date_added_inv">Added first</string>
    <string name="sorting_pref_artist">By artist A-Z</string>
    <string name="sorting_pref_artist_inv">By artist Z-A</string>
    <string name="sorting_pref_album">By album A-Z</string>
    <string name="sorting_pref_album_inv">By album Z-A</string>
    <string name="shuffle_am">Shuffle all songs</string>
    <string name="shuffle_sa">Shuffle selected album</string>
    <string name="queue_add">Enqueue</string>
    <string name="favorite_add">Favorite</string>
    <string name="filter_popup_title">Hide</string>
    <string name="filters_clear">Clear filters\?</string>
    <string name="filters_error">Could not open hidden artists/folders/albums.</string>
    <string name="queue">Queue</string>
    <string name="queue_song_add">%1s enqueued!</string>
    <string name="queue_song_remove">Remove %1s from queue?</string>
    <string name="favorites">Favorites</string>
    <string name="favorite_added">%1s (%2s) favorited</string>
    <string name="content_playback_speed">Playback speed</string>
    <string name="speed_3">Normal</string>
    <string name="sleeptimer">Sleep timer</string>
    <string name="sleeptimer_enabled">Stop playback %1s after</string>
    <string name="sleeptimer_stop">Stop</string>
    <string name="sleeptimer_cancel_desc">Stop sleep timer</string>
    <string name="content_skip_prev">Skip to previous</string>
    <string name="content_play">Play/pause</string>
    <string name="content_skip_next">Skip to next</string>
    <string name="content_repeat">Turn on/off selected repetition</string>
    <string name="open_git_pref_summary">Open the project webpage for more info :)</string>
    <string name="open_details_fragment">Open artist/folder\'s details</string>
    <string name="error_no_favorites">Add some favorites first.</string>
    <string name="error_no_music">Add some music first.</string>
    <string name="error_not_ready">Could not load the music library! :( Unmounting the SD card rebuilds the Android MediaStore database. Try again later.</string>
    <string name="error_unknown_unsupported">Something went wrong! :( Perhaps the format is unsupported, or the folder is inaccessible (not the app\'s fault!).</string>
    <string name="error_no_browser">Install a web browser first.</string>
    <string name="error_bad_id">Play a song first.</string>
    <string name="error_no_queue">No songs in queue.</string>
    <string name="error_list_ended">List ended.</string>
    <string name="error_builtin_eq">An error occurred! Use the system equalizer (if it exists)!</string>
    <string name="error_sys_eq">System equalizer not available!</string>
    <string name="error_fs_not_allowed_sum">Error! Turn off battery optimization for MPGO</string>
    <string name="error_fs_not_allowed">Something went wrong! :( Consider turning off battery optimization in the system settings: Apps &gt; All apps &gt; Music Player GO &gt; Battery &gt; Unrestricted, as it could cause the media player service to stop.</string>
    <string name="perm_rationale">Grant Music Player GO access to your files to play music.</string>
    <string name="repeat_enabled">Single repetition on.</string>
    <string name="repeat_loop_enabled">∞ repeat on.</string>
    <string name="repeat_disabled">∞ repeat off.</string>
    <string name="continue_on_end_desc">Choose whether to continue playback or pause on completion</string>
    <string name="pause_on_end">Pause on completion on.</string>
    <string name="pause_on_end_disabled">Pause on completion off.</string>
    <string name="category_ui">UI</string>
    <string name="category_audio">Audio</string>
    <string name="settings">Settings</string>
    <string name="category_general">General</string>
    <string name="theme_pref_title">Theme</string>
    <string name="theme_pref_light_title">Light</string>
    <string name="theme_pref_dark_title">Dark</string>
    <string name="theme_pref_auto_title">System</string>
    <string name="theme_pref_black_title">Pure black</string>
    <string name="accent_pref_title">Accent</string>
    <string name="active_fragments_pref_title">Active tabs</string>
    <string name="locale_pref_title">Language</string>
    <string name="locale_arabic">Arabic</string>
    <string name="locale_arabic_egypt">Arabic (Egypt)</string>
    <string name="locale_azerbaijani">Azerbaijani</string>
    <string name="locale_bakhtiari">Luri Bakhtiari</string>
    <string name="locale_basque">Basque</string>
    <string name="locale_bengali">Bengali</string>
    <string name="locale_belarusian">Belarusian</string>
    <string name="locale_bulgarian">Bulgarian</string>
    <string name="locale_czech">Czech</string>
    <string name="locale_chinese_s">Chinese (Simplified)</string>
    <string name="locale_chinese_t">Chinese (Traditional)</string>
    <string name="locale_danish">Danish</string>
    <string name="locale_dutch">Dutch</string>
    <string name="locale_english">English</string>
    <string name="locale_finnish">Finnish</string>
    <string name="locale_french">French</string>
    <string name="locale_galician">Galician</string>
    <string name="locale_german">German</string>
    <string name="locale_greek">Greek</string>
    <string name="locale_hindi">Hindi</string>
    <string name="locale_hungarian">Hungarian</string>
    <string name="locale_indonesian">Indonesian</string>
    <string name="locale_italian">Italian</string>
    <string name="locale_japanese">Japanese</string>
    <string name="locale_korean">Korean</string>
    <string name="locale_kurdish">Kurdish</string>
    <string name="locale_lituanian">Lithuanian</string>
    <string name="locale_malayalam">Malayalam</string>
    <string name="locale_nepali">Nepali</string>
    <string name="locale_norwegian_b">Norwegian (Bokmål)</string>
    <string name="locale_norwegian_n">Norwegian (Nynorsk)</string>
    <string name="locale_odia">Odia</string>
    <string name="locale_persian">Persian</string>
    <string name="locale_polish">Polish</string>
    <string name="locale_portuguese">Portuguese (Brazil)</string>
    <string name="locale_punjabi">Punjabi</string>
    <string name="locale_romanian">Romanian</string>
    <string name="locale_russian">Russian</string>
    <string name="locale_serbian">Serbian</string>
    <string name="locale_sinhalese">Sinhalese</string>
    <string name="locale_slovenian">Slovenian</string>
    <string name="locale_spanish">Spanish</string>
    <string name="locale_swedish">Swedish</string>
    <string name="locale_thai">Thai</string>
    <string name="locale_turkish">Turkish</string>
    <string name="locale_ukrainian">Ukrainian</string>
    <string name="locale_urdu">Urdu (Pakistan)</string>
    <string name="locale_vietnamese">Vietnamese</string>
    <string name="eq_pref_title">Built-in equalizer</string>
    <string name="eq_pref_sum">Force built-in equalizer use</string>
    <string name="precise_volume_pref_title">Precise volume control</string>
    <string name="focus_pref_title">Audio focus management</string>
    <string name="headset_pref_title">Headset plug management</string>
    <string name="playback_pref_title">Selected playback speed</string>
    <string name="playback_pref_summary_off">One song only</string>
    <string name="playback_pref_summary_on">Keep</string>
    <string name="on_list_ended_pref_title">When a list ends…</string>
    <string name="on_list_ended_pref_stop_title">Stop</string>
    <string name="on_list_ended_pref_continue_title">Continue</string>
    <string name="covers_pref_title">Embedded album covers</string>
    <string name="fast_seeking_pref_title">Fast seeking</string>
    <string name="fast_seeking_pref_summary">Fast forward/rewind step (seconds)</string>
    <string name="notification_actions_pref_title">Additional notification actions</string>
    <string name="notification_actions_repeat">Repeat/close</string>
    <string name="notification_actions_favorite">Add to favorites/close</string>
    <string name="notification_actions_favorite_position">Add to favorites (with position)/close</string>
    <string name="notification_actions_fast_seeking">Fast seeking</string>
    <string name="song_visual_pref_title">Song visualization</string>
    <string name="song_visual_pref_tl_title">Title</string>
    <string name="song_visual_pref_fn_title">Filename</string>
    <string name="anim_pref_title">Animations</string>
    <string name="filter_pref_title">Filters</string>
    <string name="confirm_ask_pref_title">Confirmation messages</string>
    <string name="confirm_ask_pref_sum">Ask for confirmation before doing anything</string>
    <string name="rotation_pref_title">Lock rotation</string>
    <string name="red">Red</string>
    <string name="pink">Pink</string>
    <string name="purple">Purple</string>
    <string name="deep_purple">Deep purple</string>
    <string name="indigo">Indigo</string>
    <string name="blue">Blue</string>
    <string name="light_blue">Light blue</string>
    <string name="cyan">Cyan</string>
    <string name="teal">Teal</string>
    <string name="green">Green</string>
    <string name="light_green">Light green</string>
    <string name="lime">Lime</string>
    <string name="yellow">Yellow</string>
    <string name="amber">Amber</string>
    <string name="orange">Orange</string>
    <string name="deep_orange">Deep orange</string>
    <string name="brown">Brown</string>
    <string name="grey">Grey</string>
    <string name="blue_grey">Blue grey</string>
</resources>