<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title=""
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/sleeptimer"
        android:icon="@drawable/ic_sleeptimer"
        android:title="@string/sleeptimer"
        app:showAsAction="collapseActionView|always"
        tools:ignore="AlwaysShowAction" />

    <group android:id="@+id/more_options_folder">

        <item
            android:id="@+id/action_add_queue"
            android:orderInCategory="0"
            android:title="@string/queue_add"
            app:showAsAction="never" />

        <!-- am = all artist music, sa = selected album -->
        <item
            android:id="@+id/action_shuffle_am"
            android:orderInCategory="1"
            android:title="@string/shuffle_am"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_shuffle_sa"
            android:orderInCategory="2"
            android:title="@string/shuffle_sa"
            app:showAsAction="never" />

        <item
            android:id="@+id/sorting"
            android:orderInCategory="3"
            android:title="@string/sorting_pref">

            <menu>
                <item
                    android:id="@+id/default_sorting"
                    android:orderInCategory="0"
                    android:title="@string/sorting_pref_default"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/ascending_sorting"
                    android:orderInCategory="1"
                    android:title="@string/sorting_pref_ascending"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/descending_sorting"
                    android:orderInCategory="2"
                    android:title="@string/sorting_pref_descending"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/track_sorting"
                    android:orderInCategory="3"
                    android:title="@string/sorting_pref_track"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/track_sorting_inv"
                    android:orderInCategory="4"
                    android:title="@string/sorting_pref_track_inv"
                    app:showAsAction="never" />
            </menu>
        </item>
    </group>
</menu>
