<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center"
    android:background="?android:selectableItemBackground"
    android:gravity="center"
    android:paddingEnd="24dp"
    android:paddingStart="24dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">

    <ImageView
        android:id="@+id/notif_action_0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:contentDescription="@string/content_playback_speed"
        android:padding="8dp"
        app:srcCompat="@drawable/ic_repeat_one_notif_disabled" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:contentDescription="@string/favorites_save_time"
        android:padding="8dp"
        app:tint="?android:colorButtonNormal"
        app:srcCompat="@drawable/ic_skip_previous" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:contentDescription="@string/equalizer"
        android:padding="8dp"
        app:tint="?android:colorButtonNormal"
        app:srcCompat="@drawable/ic_play" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:contentDescription="@string/favorite_add"
        android:padding="8dp"
        app:tint="?android:colorButtonNormal"
        app:srcCompat="@drawable/ic_skip_next" />

    <ImageView
        android:id="@+id/notif_action_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:contentDescription="@string/content_repeat"
        android:padding="8dp"
        app:srcCompat="@drawable/ic_close" />

</LinearLayout>
